--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "react-draggable": "^4.4.6"
+    "react-draggable": "^4.4.6",
+    "react-icons": "^5.3.0",
+    "styled-components": "^6.1.13"
   }
 }
