--- a/package.json
+++ b/package.json
@@ -47,9 +47,12 @@
     ]
   },
   "devDependencies": {
+    "@mkkellogg/gaussian-splats-3d": "^0.4.5",
     "@types/js-cookie": "^3.0.6",
+    "@types/three": "^0.169.0",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
-    "styled-components": "^6.1.13"
+    "styled-components": "^6.1.13",
+    "three": "^0.169.0"
   }
 }
