--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
+    "gsplat": "^1.2.4",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.3.0",
     "styled-components": "^6.1.13"
